# flask-mvc

./: pyproject.toml
padroesdeprojeto/: routes.py
padroesdeprojeto/app/: __init__.py  blueprint.py  config.py  settings.toml
padroesdeprojeto/controllers/: home_controller.py
padroesdeprojeto/model/: post.py
padroesdeprojeto/views/home/: index.html
tests/: fixtures.py  home_test.py
